# mirmidivi-rs

./: Cargo.toml  sample.mid
src/: main.rs  midi_in.rs  options.rs
src/midi/: midi_in.rs  midi_player.rs  mod.rs
src/renderer/: curses.rs  mod.rs  text.rs
src/renderer_lib/: mod.rs  pianoroll.rs
