[package]
name = "mirmidivi-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ['curses']
curses = ['pancurses']

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
midir = "0.9.1"
libloading = "0.7.3"
pancurses = { version = "0.17.0", optional = true}
ctrlc = "3.2.3"
anyhow = "1.0.66"
crossbeam-channel = "0.5.6"
midi-msg = "0.4.0"
mopa = "0.2.2"
