[package]
name = "mirmidivi-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ['curses']
curses = ['pancurses']

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
midir = "0.10.1"
libloading = "0.8.5"
pancurses = { version = "0.17.0", optional = true}
ctrlc = "3.4.5"
anyhow = "1.0.93"
crossbeam-channel = "0.5.13"
midi-msg = "0.7.3"
mopa = "0.2.2"
time = "0.3.36"
nodi = "1.0.1"

